src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Antiguedad_del_inmueble__c</fullName>
        <label>Antigüedad del inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asignacion_de_cupo__c</fullName>
        <label>Asignación de cupo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prioridad alta</fullName>
                </value>
                <value>
                    <fullName>Prioridad media</fullName>
                </value>
                <value>
                    <fullName>Prioridad baja</fullName>
                </value>
                <value>
                    <fullName>No prevalidado</fullName>
                </value>
                <value>
                    <fullName>Enviar correo</fullName>
                </value>
                <value>
                    <fullName>Indagar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campana__c</fullName>
        <label>Campaña</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canal_de_atencion__c</fullName>
        <label>Canal de atención</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red de oficinas</fullName>
                </value>
                <value>
                    <fullName>Sala de ventas</fullName>
                </value>
                <value>
                    <fullName>Canal Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Celular_del_propietario__c</fullName>
        <formula>Owner.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Celular del propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá</fullName>
                    <default>true</default>
                    <label>Bogotá</label>
                </value>
                <value>
                    <fullName>Medellín</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Bucaramanga</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
                <value>
                    <fullName>Pereira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Codeudor 1)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Codeudor 2)</relationshipLabel>
        <relationshipName>Oportunidades2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Codeudor 3)</relationshipLabel>
        <relationshipName>Oportunidades3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consecutivo__c</fullName>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Constructora_nombre__c</fullName>
        <formula>Proyecto__r.Constructora__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constructora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultas_realizadas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consultas realizadas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Convenio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Convenio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Solicitud_al_gerente_comercial__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Convenio)</relationshipLabel>
        <relationshipName>OportunidadesConvenios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detalle__c</fullName>
        <label>Detalle</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Cónyugue no cumple centrales</fullName>
                </value>
                <value>
                    <fullName>Soportes de la actividad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_cliente_deudor__c</fullName>
        <label>Email cliente deudor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entidad_cedente__c</fullName>
        <label>Entidad cedente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bancamia</fullName>
                </value>
                <value>
                    <fullName>Banco Agrario</fullName>
                </value>
                <value>
                    <fullName>Banco AV Villas</fullName>
                </value>
                <value>
                    <fullName>Banco BBVA</fullName>
                </value>
                <value>
                    <fullName>Banco Caja Social</fullName>
                </value>
                <value>
                    <fullName>Banco Colpatria</fullName>
                </value>
                <value>
                    <fullName>Banco Compartir</fullName>
                </value>
                <value>
                    <fullName>Banco Coomeva</fullName>
                </value>
                <value>
                    <fullName>Banco Cooperativo Coopcentral</fullName>
                </value>
                <value>
                    <fullName>Banco Corpbanca</fullName>
                </value>
                <value>
                    <fullName>Banco Davivienda</fullName>
                </value>
                <value>
                    <fullName>Banco de Bogotá</fullName>
                </value>
                <value>
                    <fullName>Banco de Occidente</fullName>
                </value>
                <value>
                    <fullName>Banco Falabella</fullName>
                </value>
                <value>
                    <fullName>Banco Finandina</fullName>
                </value>
                <value>
                    <fullName>Banco Multibank</fullName>
                </value>
                <value>
                    <fullName>Banco Mundo Mujer</fullName>
                </value>
                <value>
                    <fullName>Banco Pichincha</fullName>
                </value>
                <value>
                    <fullName>Banco Popular</fullName>
                </value>
                <value>
                    <fullName>Banco Procredit</fullName>
                </value>
                <value>
                    <fullName>Banco WWB</fullName>
                </value>
                <value>
                    <fullName>Bancolombia</fullName>
                </value>
                <value>
                    <fullName>Confiar Cooperativa Financiera</fullName>
                </value>
                <value>
                    <fullName>Coofinep Cooperativa Financiera</fullName>
                </value>
                <value>
                    <fullName>Cooperativa Financiera Cotrafa</fullName>
                </value>
                <value>
                    <fullName>Cooperativa Financiera de Antioquia</fullName>
                </value>
                <value>
                    <fullName>Cooperativa Financiera JFK</fullName>
                </value>
                <value>
                    <fullName>Corficolombiana</fullName>
                </value>
                <value>
                    <fullName>Fiduciaria La Previsora</fullName>
                </value>
                <value>
                    <fullName>Financiera Juriscoop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_Consulta__c</fullName>
        <label>Estado consulta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disponible para consulta</fullName>
                    <default>true</default>
                    <label>Disponible para consulta</label>
                </value>
                <value>
                    <fullName>Esperando respuesta Consulta Interna</fullName>
                </value>
                <value>
                    <fullName>Esperando respuesta Datacrédito</fullName>
                </value>
                <value>
                    <fullName>Esperando respuesta CIFIN</fullName>
                </value>
                <value>
                    <fullName>Cantidad de consultas agotadas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excepcion__c</fullName>
        <label>Excepción</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_del_propietario__c</fullName>
        <formula>Owner.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extensión del propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ganada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ganada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <label>Grupo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingresos_Familiares__c</fullName>
        <description>Corresponde al total de ingresos que tienen en la familia para postularse al crédito</description>
        <inlineHelpText>Ingrese el total de ingresos de todos los aportantes para la solicitud de crédito</inlineHelpText>
        <label>Ingresos Familiares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inmueble_identificado__c</fullName>
        <label>Inmueble identificado</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_de_producto__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Libre_de_gravamenes_hipotecas_o_deudas__c</fullName>
        <label>Libre de gravámenes, hipotecas o deudas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meta</label>
        <referenceTo>Meta__c</referenceTo>
        <relationshipLabel>Meta</relationshipLabel>
        <relationshipName>Meta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Motivo_de_apertura__c</fullName>
        <label>Motivo de apertura</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No cumple score en datacrédito</fullName>
                </value>
                <value>
                    <fullName>No cumple políticas de centrales.</fullName>
                </value>
                <value>
                    <fullName>Ahorro programado voluntario</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                    <default>true</default>
                    <label>Otro</label>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_desistido__c</fullName>
        <label>Motivo desistido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito con otra entidad financiera</fullName>
                </value>
                <value>
                    <fullName>Tasa del crédito</fullName>
                </value>
                <value>
                    <fullName>No esta interesado en las condiciones</fullName>
                </value>
                <value>
                    <fullName>Plazo del crédito</fullName>
                </value>
                <value>
                    <fullName>Monto del crédito</fullName>
                </value>
                <value>
                    <fullName>No cumple política</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_codeudor_1__c</fullName>
        <label>Motivo no viable codeudor 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_codeudor_2__c</fullName>
        <label>Motivo no viable codeudor 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_codeudor_3__c</fullName>
        <label>Motivo no viable codeudor 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_no_viable_deudor__c</fullName>
        <label>Motivo no viable deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por definir tipo de vivienda</fullName>
                </value>
                <value>
                    <fullName>Documentos por entregar</fullName>
                </value>
                <value>
                    <fullName>Sin cuota inicial</fullName>
                </value>
                <value>
                    <fullName>Puntaje data Crédito</fullName>
                </value>
                <value>
                    <fullName>Antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Endeudamiento financiero</fullName>
                </value>
                <value>
                    <fullName>No maneja extractos bancarios</fullName>
                </value>
                <value>
                    <fullName>Mora pagada &lt; 1 año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_obligacion__c</fullName>
        <label>Número de obligación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_vivienda__c</fullName>
        <description>Corresponde al número de vivienda que el cliente esta comprando, es decir, la primera (1), la segunda (2), etc.</description>
        <inlineHelpText>Ingrese el número de vivienda que el cliente va a comprar: primera vivienda (1), segunda vivienda (2), etc.</inlineHelpText>
        <label>Número de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_vivienda__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Número vivienda</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_estado_consulta__c</fullName>
        <label>Observaciones estado consulta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <label>Oficina</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canal_de_atencion__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bogotá Calle 64</fullName>
                </value>
                <value>
                    <fullName>Bogotá Calle 69</fullName>
                </value>
                <value>
                    <fullName>Bogotá 20 de Julio</fullName>
                </value>
                <value>
                    <fullName>Medellin Centro</fullName>
                </value>
                <value>
                    <fullName>Barranquilla Centro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <label>Origen</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <inlineHelpText>En años</inlineHelpText>
        <label>Plazo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyecto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Proyecto__c.Estado_de_aprobacion_Riegos__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <filterItems>
                <field>Proyecto__c.Estado_de_aprobacion_Riegos__c</field>
                <operation>notEqual</operation>
                <value>Bloqueado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Proyecto__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>Owner.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resultado_del_Prevalidador__c</fullName>
        <label>Resultado del Prevalidador</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tiene_convenio__c</fullName>
        <label>Tiene convenio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente contacto con el cliente</fullName>
                </value>
                <value>
                    <fullName>Primer contacto</fullName>
                </value>
                <value>
                    <fullName>Segundo contacto</fullName>
                </value>
                <value>
                    <fullName>Tercer contacto</fullName>
                </value>
                <value>
                    <fullName>Pendiente entrega documentación</fullName>
                </value>
                <value>
                    <fullName>Por antigüedad laboral</fullName>
                </value>
                <value>
                    <fullName>Por endeudamiento financiero y capacidad de Pago</fullName>
                </value>
                <value>
                    <fullName>Paz y salvo menor a un año</fullName>
                </value>
                <value>
                    <fullName>No contactado</fullName>
                </value>
                <value>
                    <fullName>Por problemas personales</fullName>
                </value>
                <value>
                    <fullName>No interesado en el crédito</fullName>
                </value>
                <value>
                    <fullName>Por endeudamiento financiero vs ingreso</fullName>
                </value>
                <value>
                    <fullName>Prestador de servicios y no es profesional</fullName>
                </value>
                <value>
                    <fullName>Por monto insuficiente</fullName>
                </value>
                <value>
                    <fullName>Por tasas de interés</fullName>
                </value>
                <value>
                    <fullName>Garantía del Inmueble no Viable</fullName>
                </value>
                <value>
                    <fullName>Independiente no cumple política</fullName>
                </value>
                <value>
                    <fullName>Por edad</fullName>
                </value>
                <value>
                    <fullName>A solicitud del cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Registro_de_Oportunidad__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Registro de Oportunidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_persona__c</fullName>
        <label>Tipo de persona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural</fullName>
                    <default>true</default>
                    <label>Natural</label>
                </value>
                <value>
                    <fullName>Jurídica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_producto__c</fullName>
        <label>Tipo de producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asignación de cupo</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
                <value>
                    <fullName>Compra de cartera</fullName>
                </value>
                <value>
                    <fullName>Cuenta de ahorros</fullName>
                    <default>true</default>
                    <label>Cuenta de ahorros</label>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda__c</fullName>
        <label>Tipo de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vis</fullName>
                </value>
                <value>
                    <fullName>No Vis</fullName>
                </value>
                <value>
                    <fullName>Vipa</fullName>
                </value>
                <value>
                    <fullName>Vip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda_proyecto__c</fullName>
        <formula>Proyecto__r.Tipo_de_proyecto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de vivienda proyecto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_a_consignar__c</fullName>
        <label>Valor a consignar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_actual__c</fullName>
        <label>Valor cuota actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito__c</fullName>
        <label>Valor del crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_inmueble__c</fullName>
        <label>Valor del inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Viable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vive_en_el_inmueble__c</fullName>
        <label>Vive en el inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>propietario_de_la_oportunidad__c</fullName>
        <formula>Owner.FirstName&amp;&quot; &quot;&amp;Owner.MiddleName&amp;&quot; &quot;&amp;Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>propietario de la oportunidad</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Creditos_leasing_y_mejoramientos</fullName>
        <active>true</active>
        <businessProcess>Créditos%2C leasing%2C mejoramiento de vivienda</businessProcess>
        <label>Créditos, leasing y mejoramientos de vivienda</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cuenta_de_ahorros_CDT</fullName>
        <active>true</active>
        <businessProcess>Cuenta de ahorros - CDT</businessProcess>
        <label>Cuenta de ahorros - CDT</label>
    </recordTypes>
    <validationRules>
        <fullName>OP001_Valida_registro_constructora</fullName>
        <active>false</active>
        <description>Cuando el tipo de producto es vivienda nueva, se debe diligenciar el campo constructora.</description>
        <errorConditionFormula>AND (
ISBLANK (  Proyecto__c  ),
ISPICKVAL( Cliente_deudor__r.Canal_digital__c , &quot; &quot;),

 OR  (
   ISPICKVAL ( Tipo_de_producto__c , &quot;Crédito de vivienda nueva&quot;), 
   ISPICKVAL ( Tipo_de_producto__c, &quot;Leasing habitacional vivienda nueva&quot;)
))</errorConditionFormula>
        <errorMessage>OP-001. Si el tipo de producto es crédito vivienda nueva o leasing habitacional vivienda nueva debe registrar la constructora.</errorMessage>
    </validationRules>
</CustomObject>